# gistops

./: .gitignore  .pylintrc  Dockerfile  LICENSE  README.md
.github/workflows/: build-and-deploy-gistops.yaml  build-and-push-gistops-base.yaml  build-and-push-gistops-confluence.yaml  build-and-push-gistops-convert.yaml  build-and-push-gistops-devenv.yaml  build-and-push-gistops-git-ls-attr.yaml  build-and-push-gistops-git-mirror.yaml  build-and-push-gistops-githubenv.yaml  build-and-push-gistops-iterate.yaml  build-and-push-gistops-jira.yaml  build-and-push-gistops-jupyter.yaml  build-and-push-gistops-mirror.yaml  build-and-push-gistops-msteams.yaml  build-and-push-gistops-pandoc.yaml  build-and-push-gistops-trufflehog.yaml  build-and-push-gistops.yaml
ci-templates/gitlab-ci/gitlab-ci-mirror-jobs/: .gitlab-ci.yml  README.md
ci-templates/gitlab-ci/gitlab-ci-mirror-jobs/git-force-push-remote-branch/: apply.sh  gitlab-ci.tmpl.yml
ci-templates/gitlab-ci/gitlab-ci-mirror-jobs/git-force-push-remote-tag/: apply.sh  gitlab-ci.tmpl.yml
ci-templates/gitlab-ci/gitlab-ci-mirror-jobs/git-pull-conventional-remote-branches/: Dockerfile  apply.sh  gitlab-ci.tmpl.yml
ci-templates/gitlab-ci/gitlab-ci-mirror-jobs/git-zip-archive-mr-to-s3/: Dockerfile  apply.sh  gitlab-ci.tmpl.yml
convert/: .gitignore  Dockerfile
dev/cloud9-al2/: python3venv.run  setmeup.sh
dev/container/: Dockerfile  setmeup-git-alias-and-config.sh
docs/: motivation.pptx  ~$motivation.pptx
envs/devenv/: Dockerfile  how-to-use-with-docker-desktop.md  setmeup-python37.sh
envs/githubenv/: Dockerfile
gistops/: .dockerignore  Dockerfile  __init__.py  main.py  requirements.txt  setup-python-venv.sh
gistops/base/: .snyk  Dockerfile  README.md
gistops/confluence/: .dockerignore  pyproject.toml  requirements.txt
gistops/confluence/gistops/: gists.py  main.py  publishing.py
gistops/confluence/tests/: test_confluence.py
gistops/confluence/tests/repos/: .gitignore
gistops/convert/: Dockerfile  pyproject.toml
gistops/convert/gistops/: converting.py  gists.py  main.py
gistops/gistops/: __init__.py  gists.py  git_mirror.py  mirror.py  pandoc_convert.py  publish.py  remote.py  render.py  shell.py  version.py
gistops/git-ls-attr/: .snyk  Dockerfile  README.md  pyproject.toml
gistops/git-ls-attr/gistops/: gists.py  iterate.py  main.py  shell.py
gistops/git-ls-attr/tests/: test_git_ls_attr.py
gistops/git-ls-attr/tests/repos/: .gitignore
gistops/git-mirror/: setup-python-venv.sh
gistops/git-mirror/gistops/: main.py  mirroring.py
gistops/iterate/: Dockerfile  requirements.txt
gistops/iterate/gistops/: __init__.py  gists.py  iterate.py  main.py
gistops/jira/: requirements.txt  setup-python-venv.sh
gistops/jira/gistops/: main.py  publishing.py
gistops/jira/tests/: test_jira.py
gistops/jira/tests/repos/: .gitignore
gistops/jupyter/: pyproject.toml  requirements.txt
gistops/jupyter/gistops/: extract.py  gists.py  main.py  nbconvertion.py
gistops/jupyter/tests/: test_jupyter.py
gistops/mirror/: .dockerignore  Dockerfile
gistops/mirror/gistops/: gists.py  mirroring.py
gistops/msteams/: README.md  pyproject.toml  requirements.txt  setup-python-venv.sh
gistops/msteams/gistops/: gists.py  graph.py  main.py  reporting.py  trailing.py  trails.py
gistops/msteams/tests/: test_msteams.py
gistops/pandoc/: .dockerignore  .snyk  Dockerfile  README.md  pyproject.toml  requirements.txt
gistops/pandoc/gistops/: converting.py  gists.py  main.py
gistops/pandoc/tests/: test_pandoc.py
gistops/src/: gists.py  main.py  publish.py  render.py
gistops/tests/: test_git-ls-attr.py
gistops/trufflehog/: Dockerfile  README.md  gistops
hooks/: pre-commit
iterate/: Dockerfile  setup-python-venv.sh
iterate/gistops/: gists.py  main.py  shell.py
scripts/: gistops.ps1  gistops.sh
setmeup/chrome-os-debian-11/: launch.json  setmeup.sh
setmeup/cloud9-amazon-linux2/: gistops-python3venv.run  setmeup.sh
setmeup/cloud9-ubuntu-18-04-lts/: setmeup.sh
setmeup/common/: devops-reports.pre-commit
setmeup/common/linux/: setup-git-and-config.sh
setmeup/docker-ubuntu-20.04-lts/: Dockerfile  how-to-use-with-docker-desktop.md  setmeup-python3.sh
src/: Dockerfile  README.md  pyproject.toml  requirements.txt  setup-python-venv.sh
src/gistops/: .~c9_invoke_PW51uD.py  .~c9_invoke_SgovOj.py  .~c9_invoke_jaKJhP.py  callback.py  converting.py  downstream.py  gists.py  main.py  mirroring.py  pandoc.py  publishing.py  rendering.py  shell.py
