[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gistops"
version = "0.1.0"
authors = [
  { name="DanDens" }
]
description = "Operations on Gists"
readme = "README.md"
keywords = ["gist", "git", "pandoc", "convert", "markdown"]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "jsonschema>=4.16.0",
    "jinja2>=3.1.2",
    "invoke>=1.7.3",
    "pyyaml==6.0",
    "fire>=0.4.0"
]

[project.urls]
"Homepage" = "https://github.com/dandens/gistops"

[project.scripts]
gistops = "gistops.main:main"

[tool.setuptools]
packages = ["gistops"]
