[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gistops"
version = "0.1.0"
authors = [
  { name="DanDens" }
]
description = "Operations on Gists"
readme = "README.md"
keywords = ["gist", "git", "pandoc", "convert", "markdown"]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "jsonschema>=4.16.0",
    "fire>=0.4.0",
    "semver==2.13.0",
    "jupyter==1.0.0",
    "numpy==1.21.6",
    "scipy==1.7.3",
    "matplotlib==3.5.3",
    "altair==4.2.0",
    "beautifulsoup4==4.11.1",
    "bokeh==2.4.3",
    "bottleneck==1.3.5",
    "cloudpickle==2.2.0",
    "cython==0.29.32",
    "dask==2022.2.0",
    "dill==0.3.6",
    "h5py==3.7.0",
    "numba==0.56.4",
    "numexpr==2.8.4",
    "openpyxl==3.0.10",
    "pandas==1.3.5",
    "patsy==0.5.3",
    "protobuf==4.21.12",
    "tables==3.7.0",
    "scikit-image==0.19.3",
    "scikit-learn==1.0.2",
    "seaborn==0.12.1",
    "sqlalchemy==1.4.45",
    "statsmodels==0.13.5",
    "sympy==1.10.1",
    "widgetsnbextension==4.0.5",
    "xlrd==2.0.1"
]

[project.urls]
"Homepage" = "https://github.com/dandens/gistops"

[project.scripts]
gistops = "gistops.main:main"

[tool.setuptools]
packages = ["gistops"]
